--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Dice App</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="shortcut icon" href="./favicon_dice.ico" type="image/x-icon">
   </head>
   <body>
     <div class="background">
